<resources>
    <string name="app_name">Leads</string>
    <string name="create_new_lead">Create new lead</string>
    <string name="home">Home</string>
    <string name="calls">Calls</string>
    <string name="chats">Chats</string>
    <string name="leads">Leads</string>
    <string name="organizer">Organizer</string>
    <string name="not_implemented">Not Implemented</string>
    <string name="avatar">Lead Avatar</string>
    <string name="lead_information">Lead Information</string>
    <string name="first">First</string>
    <string name="last">Last</string>
    <string name="lead_type">Lead Type</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="language">Language</string>
    <string name="number">Number</string>
    <string name="email">Email</string>
    <string name="source">Source</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="lead_profile">Lead Profile</string>
    <string name="lead_status">Lead status:</string>
    <string name="status">Status</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="mail">Mail</string>
    <string name="follow_up">Follow Up</string>
    <string name="meeting">Meeting</string>
    <string name="general_info">General Info</string>
    <string name="adSource">Ad-Source</string>
    <string name="unknown">Unknown</string>
    <string name="webSource">Web-Source</string>
    <string name="cityRegion">City/Region</string>
    <string name="channelSource">Channel-Source</string>
    <string name="nationality">Nationality</string>
    <string name="birthday">Birthday</string>
    <string name="budget">Budget</string>
    <string name="property_type">Property Type</string>
    <string name="location">Location</string>
    <string name="tags_and_interests">Tags and Interests</string>
    <string name="created_at_pattern">Created at: %1$s</string>
    <string name="updated_at_pattern">Updated at: %1$s</string>
    <string name="country_name_pattern">%1$s %2$s</string>
    <string name="select_country">Select Country</string>
    <string name="select_city">Select City</string>
    <string name="select_language">Select Language</string>
    <string name="select_source">Select Source</string>
    <string name="demographic">Demographic</string>
    <string name="interests">Interests</string>
    <string name="id_pattern">ID: %1$d</string>
    <string name="select_status">Select Status</string>
    <string name="search">Search</string>
    <string name="content_d_arrow">Arrow</string>
    <string name="content_darrow_down">Arrow Down</string>
    <string name="content_d_arrow_down">Arrow Down</string>
</resources>